--- a/app/ui/components/ShowcaseViewer/ShowcaseViewer.module.scss
+++ b/app/ui/components/ShowcaseViewer/ShowcaseViewer.module.scss
@@ -35,9 +35,6 @@
 			width: auto !important;
 			svg {
 				max-height: 400px;
-				@include vars.break(tablet) {
-					height: 50vh;
-				}
 			}
 		}
 	}
