--- a/app/ui/modules/HeroArticle/HeroArticle.module.scss
+++ b/app/ui/modules/HeroArticle/HeroArticle.module.scss
@@ -29,7 +29,7 @@
 	&__title {
 		@include vars.text-display-medium;
 		display: block;
-		color: var(--color-accent);
+		color: var(--color-accent-alt);
 	}
 	&__metadata {
 		display: block;
