--- a/app/ui/modules/blog/Article/PostImage/PostImage.module.scss
+++ b/app/ui/modules/blog/Article/PostImage/PostImage.module.scss
@@ -9,7 +9,6 @@
 		position: relative;
 		display: block;
 		border-radius: 2px;
-		box-shadow: 0 8px 12px 4px rgba($color: #000000, $alpha: 0.2);
 	}
 	&__caption {
 		display: block;
